syntax = "proto3";

package GRPC.bruger;

message Bruger{
  string username = 1;
  string password = 2;
  int32 depotID = 3;
  double saldo = 4;

}

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}
message HelloResponse {
  string greeting = 1;
}


service HelloService{
  rpc hello(HelloRequest) returns (HelloResponse);
}
